--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -1,3 +1,9 @@
+card-box {
+  display: block;
+  background-color: var(--color-white);
+  padding: 32px 16px;
+}
+
 gradient-box {
   display: flex;
   align-items: center;
@@ -6,3 +12,4 @@ gradient-box {
   height: 100vh;
   background-image: radial-gradient(100% 100% at 50% 100%, #feb2b2 0%, rgba(252, 184, 219, 0.75) 25%, rgba(239, 194, 250, 0.5) 50%, rgba(190, 227, 248, 0) 100%), linear-gradient(134deg, #2c4672 0%, #325e7a 7%, #387687 14%, #3b8f95 21%, #3ca9a0 28%, #37c4a5 35%, #1fff4f 49%, #a2e500 56.29%, #c7cc00 63.57%, #dbb500 70.86%, #ec9b00 78.14%, #ff7936 85.43%, #ff1fa5 100%)
 }
+
