--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -1,3 +1,14 @@
 :root {
   --color-white: #fff;
+  --sz-base: 4px;
+  --sz-1: var(--sz-base);
+  --sz-2: calc(2 * var(--sz-base));
+  --sz-3: calc(3 * var(--sz-base));
+  --sz-4: calc(4 * var(--sz-base));
+  --sz-5: calc(5 * var(--sz-base));
+  --sz-6: calc(6 * var(--sz-base));
+  --sz-7: calc(7 * var(--sz-base));
+  --sz-8: calc(8 * var(--sz-base));
+  --sz-9: calc(9 * var(--sz-base));
+  --sz-10: calc(10 * var(--sz-base));
 }
