--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -1,7 +1,7 @@
 card-box {
   display: block;
   background-color: var(--color-white);
-  padding: 32px 16px;
+  padding: var(--sz-8) var(--sz-4);
 }
 
 gradient-box {
@@ -39,6 +39,6 @@ gradient-box {
 list-grid {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: var(--sz-4);
   align-items: center;
 }
