--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -1,44 +1,39 @@
 card-box {
   display: block;
+  position: relative;
   background-color: var(--color-white);
-  padding: var(--sz-8) var(--sz-4);
+  padding: var(--sz-10) var(--sz-5);
+  border-radius: var(--sz-2);
+  z-index: 2;
 }
 
 gradient-box {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background-image:
-    radial-gradient(
-      100% 100% at 50% 100%,
-      #feb2b2 0%,
-      rgba(252, 184, 219, 0.75) 25%,
-      rgba(239, 194, 250, 0.5) 50%,
-      rgba(190, 227, 248, 0) 100%
-    ),
-    linear-gradient(
-      134deg,
-      #2c4672 0%,
-      #325e7a 7%,
-      #387687 14%,
-      #3b8f95 21%,
-      #3ca9a0 28%,
-      #37c4a5 35%,
-      #1fff4f 49%,
-      #a2e500 56.29%,
-      #c7cc00 63.57%,
-      #dbb500 70.86%,
-      #ec9b00 78.14%,
-      #ff7936 85.43%,
-      #ff1fa5 100%
-    )
+  background-color: var(--color-blue-bright);
+}
+
+gradient-box::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-blueberry);
+  z-index: 1;
 }
 
 list-grid {
   display: flex;
   flex-direction: column;
-  gap: var(--sz-4);
+  gap: var(--sz-6);
   align-items: center;
 }
