--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -10,6 +10,7 @@ card-box {
 card-box-actions {
   display: block;
   position: absolute;
+  width: -moz-available;
   transform: translate(-50%);
   height: var(--sz-button-h);
   bottom: calc(var(--sz-button-h) / -2);
