--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
   --color-white: #fff;
+  --color-black: #000;
   --color-light-gray: #ccc;
   --color-blue-bright: #363dc2;
   --color-blueberry: #282faf;
