--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -4,7 +4,6 @@ card-box {
   background-color: var(--color-white);
   padding: var(--sz-10) var(--sz-5) var(--sz-12);
   border-radius: var(--sz-2);
-  z-index: 2;
 }
 
 card-box-actions {
@@ -17,17 +16,17 @@ card-box-actions {
   left: 50%;
 }
 
-gradient-box {
+background-box {
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background-color: var(--color-blue-bright);
+  z-index: 3;
 }
 
-gradient-box::before {
+background-box::before {
   content: '';
   display: block;
   position: absolute;
@@ -38,7 +37,21 @@ gradient-box::before {
   border-radius: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--color-blueberry);
+  z-index: 2;
+}
+
+background-box::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-blue-bright);
   z-index: 1;
+}
+
+background-box-content {
+  z-index: 3;
 }
 
 list-grid {
