--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -5,3 +5,8 @@ html, body {
   font-family: 'Montserrat', sans-serif;
   color: var(--color-white);
 }
+
+h1 {
+  font-size: 24px;
+  font-weight: 600;
+}
