--- a/src/shared/components/custom/styles.css
+++ b/src/shared/components/custom/styles.css
@@ -19,8 +19,6 @@ card-box-actions {
 background-box {
   display: flex;
   position: relative;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100vh;
   z-index: 3;
@@ -51,7 +49,13 @@ background-box::after {
 }
 
 background-box-content {
-  z-index: 3;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  z-index: 4;
 }
 
 list-grid {
@@ -59,4 +63,25 @@ list-grid {
   flex-direction: column;
   gap: var(--sz-6);
   align-items: center;
+}
+
+top-bar {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: var(--sz-5) var(--sz-8);
+  box-sizing: border-box;
+}
+
+logo-type {
+  display: block;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  text-align: center;
 }
