--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -7,6 +7,7 @@
   --color-blueberry-2: #0d1388;
   --color-pink: #f52b89;
   --color-pink-2: #fc0879;
+  --color-red: #db2929;
 
   --sz-base: 4px;
   --sz-1: var(--sz-base);
