--- a/src/shared/components/TextField/TextField.module.css
+++ b/src/shared/components/TextField/TextField.module.css
@@ -1,6 +1,13 @@
+.box {
+  width: 100%;
+}
+
 .field {
   display: block;
+  box-sizing: border-box;
+  width: 100%;
   padding: var(--sz-1) var(--sz-3);
+  margin-bottom: 8px;
   font-size: 16px;
   font-weight: 400;
   font-family: 'Montserrat', sans-serif;
@@ -14,4 +21,10 @@
   margin-bottom: var(--sz-2);
   font-size: 14px;
   color: var(--color-black);
+}
+
+.error {
+  color: var(--color-red);
+  font-size: 14px;
+  line-height: 18px;
 }
