--- a/src/shared/components/Button/styles.css
+++ b/src/shared/components/Button/styles.css
@@ -1,5 +1,6 @@
 button[is="my-button"] {
   display: block;
+  position: relative;
   min-width: 150px;
   width: max-content;
   height: var(--sz-button-h);
@@ -33,4 +34,27 @@ button[is="my-button"][data-color="transparent"] {
 
 button[is="my-button"][data-color="transparent"]:hover {
   background-color: var(--color-blueberry-2);
+}
+
+button[is="my-button"][data-loading="true"] {
+  color: transparent;
+  pointer-events: none;
+}
+
+button[is="my-button"][data-loading="true"]::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-top-color: #fff;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: spinner 0.6s linear infinite;
+}
+
+@keyframes spinner {
+  to { transform: translate(-50%, -50%) rotate(360deg); }
 }
